<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:id="@+id/filter_dialog"
    android:background="@color/bg_color_2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_title_color"
        android:text="Chọn"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_new_ver"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Độ ưu tiên"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_priority_0"
                android:text="@string/priority_0"
                android:textColor="@color/white"
                android:textSize="12sp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_priority_1"
                android:text="@string/priority_1"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_priority_2"
                android:text="@string/priority_2"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_priority_3"
                android:text="@string/priority_3"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Trạng thái"
        android:textSize="18sp"
        android:layout_marginHorizontal="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_status_0"
                android:text="@string/coming_soon"
                android:textColor="@color/white"
                android:textSize="12sp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_status_1"
                android:text="@string/on_going"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_status_2"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_status_3"
                android:text="@string/over"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_status_4"
                android:text="@string/finish_late"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginTop="-15dp"/>
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@null"
        android:background="@drawable/bg_spiner"
        android:text="Xác nhận lọc"
        android:textColor="@color/text_title_color"
        android:id="@+id/btn_filter"
        android:layout_marginTop="30dp"

        />
</LinearLayout>