<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_add_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/playfair_regular"
        android:gravity="center"
        android:text="@string/tv_add_job_type"
        android:textColor="@color/text_title_color"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/bg_tab_layout">

        <EditText
            android:id="@+id/edt_dlg_job_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="30dp"
            android:background="@null"
            android:hint="@string/hint_add_job_type"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/LightSlateGray" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/line" />

    <Button
        android:id="@+id/btn_dlg_add_job_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/bg_btn_1"
        android:backgroundTint="@null"
        android:text="@string/save"
        android:textColor="@color/text_title_color" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/line" />

</LinearLayout>