<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ln_statistic"
    android:paddingTop="7dp"
    android:paddingBottom="7dp"
    android:weightSum="12"
    android:gravity="center"
    android:orientation="horizontal"

    >
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="4.3">
        <TextView
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="@color/on_ongoing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_going"
            android:layout_marginRight="3dp"/>

        <TextView
            android:id="@+id/tv_ongoing"
            android:textColor="@color/on_ongoing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="4.3">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/finish"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_marginRight="3dp"/>

        <TextView
            android:id="@+id/tv_finish"
            android:textColor="@color/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:layout_weight="3.3">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:layout_marginRight="3dp"/>

        <TextView
            android:id="@+id/tv_total"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10000" />
    </LinearLayout>

</LinearLayout>