<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_round"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/img_close_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/goback1" />

        <TextView
            android:id="@+id/tv_title_add_new_job_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1.99"
            android:fontFamily="@font/playfair_regular"
            android:paddingEnd="25dp"
            android:text="@string/add_job_detail"
            android:textAlignment="center"
            android:textColor="@color/text_title_color"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-10dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/bg_tab_layout">

        <EditText
            android:id="@+id/edt_dlg_job_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="30dp"
            android:background="@null"
            android:hint="@string/hint_job_detail_name"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/LightSlateGray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/bg_tab_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:text="Độ ưu tiên:"
            android:textColor="@color/sub_bg_color"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spiner_jobdetail_priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_weight="2"
            android:outlineAmbientShadowColor="@color/orange"
            android:outlineSpotShadowColor="@color/orange"
            android:textColor="@color/orange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_des"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_dlg_job_detail_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/hint_job_detail_description"
            android:inputType="text|textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/LightSlateGray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:background="@drawable/bg_tab_layout"
        android:gravity="center_vertical"
        android:weightSum="2">

        <EditText
            android:id="@+id/edt_dlg_job_detail_estimate_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="1.75"
            android:background="@null"
            android:hint="@string/hint_estimate_time"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/LightSlateGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_regular"
            android:text="|"
            android:textColor="@color/LightSlateGray"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/playfair_regular"
            android:text="phút"
            android:textColor="@color/LightSlateGray"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:src="@drawable/line" />

    <Button
        android:id="@+id/btn_dlg_add_new_job_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/bg_btn_1"
        android:backgroundTint="@null"
        android:text="@string/save"
        android:textColor="@color/text_title_color" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/line" />
</LinearLayout>